--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "nodemon -e js,jade,css,json --exec nodejs ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.0.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "cookie-parser": "~1.0.1",
+    "cookie-parser": "^1.4.4",
     "debug": "~4.1.1",
     "express": "~4.16.4",
     "jade": "~1.3.0",
@@ -17,5 +17,8 @@
     "morgan": "~1.9.1",
     "popper.js": "^1.15.0",
     "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   }
 }
